# cryptoai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-16T14-46-32-299Z.yml  page-2026-06-16T14-52-10-833Z.yml  page-2026-06-16T14-52-26-556Z.yml  page-2026-06-16T14-52-41-672Z.yml  page-2026-06-16T14-53-26-420Z.yml
configs/: default.yaml
data/: ai_quality.json  settings.json
docs/: API.md  ARCHITECTURE.md  AUDIT_REPORT.md  SETUP.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: DashboardOverview.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: DashboardCard.tsx  PerformanceChart.tsx  PositionsTable.tsx  ScoreCard.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
src/: __init__.py  config.py  main.py
src/analysis/: __init__.py
src/analysis/news/: __init__.py  aggregator.py  analyzer.py  scorer.py
src/analysis/onchain/: __init__.py  exchange_flow.py  scorer.py  whale_tracker.py
src/analysis/orderbook/: __init__.py  analyzer.py  manipulation.py  slippage.py
src/analysis/social/: __init__.py  manipulation.py  scorer.py  sentiment.py  tracker.py
src/analysis/technical/: __init__.py  aggregator.py  engine.py  indicators.py  patterns.py  scorer.py
src/api/: __init__.py  app.py  auth.py
src/api/routes/: __init__.py  ai.py  backtesting.py  execution.py  health.py  market.py  performance.py  portfolio.py  risk.py  screener.py  settings.py  stream.py  trades.py  trading.py
src/backtesting/: __init__.py  cli.py  comparator.py  engine.py  metrics.py
src/core/: __init__.py  ai_agent.py  decision_engine.py
src/data/: __init__.py
src/data/collectors/: __init__.py  market_collector.py
src/data/market/: schema.py  (+4 more)
src/execution/: __init__.py  live_trading.py  manager.py  paper.py
src/notifications/: __init__.py  telegram_bot.py
src/portfolio/: __init__.py  manager.py
src/risk/: __init__.py  circuit_breaker.py  manager.py
src/utils/: __init__.py  database.py  exceptions.py  logging.py  singleton.py
tests/: __init__.py
tests/analysis/: test_indicators_integration.py  test_news.py  test_onchain.py  test_orderbook.py  test_social.py  test_technical_engine.py
tests/api/: __init__.py  test_all_routes.py  test_health_routes.py  test_market_routes.py
tests/integration/: test_analysis_to_portfolio.py  test_backtest_to_decision.py  test_full_pipeline.py  test_multi_source_fusion.py
tests/unit/: test_ai_agent.py  test_backtest_comparator.py  test_backtest_engine.py  test_backtest_metrics.py  test_circuit_breaker.py  test_portfolio_manager.py  test_risk_manager.py  test_technical_indicators.py
(+17 files in other folders)
