[project]
name = "cryptoai"
version = "1.0.0"
description = "Plateforme de trading crypto autonome pilotée par IA — Niveau Hedge Fund"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "CryptoAI Team" },
]

dependencies = [
    # Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Data processing
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "ta>=0.11.0",                     # Technical Analysis library

    # Exchange connectivity
    "ccxt>=4.4.0",

    # Async networking
    "aiohttp>=3.10.0",
    "aiofiles>=24.1.0",
    "websockets>=14.1",

    # Database
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",

    # ML / Data Science
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",

    # Security
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",

    # Async processing
    "anyio>=4.6.0",
    "asyncio-throttle>=1.0.0",

    # Monitoring
    "prometheus-client>=0.21.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "orjson>=3.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "coverage>=7.6.0",
    "faker>=33.0.0",
    "ipython>=8.29.0",
    "watchfiles>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cryptoai*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "C4", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class BaseException",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
